# duckdb_macos

./: .gitmodules  CMakeLists.txt  CMakePresets.json  main.cpp
.github/workflows/: build.yaml
cmake/common/: bootstrap.cmake
